# Calendarone_AI

./: .pre-commit-config.yaml  pyproject.toml
backend/: .env.dev  .env.test  .gitignore  pyproject.toml
backend/api_server/: initial_data.py  main.py  server.py
backend/api_server/alembic/: env.py
backend/api_server/alembic/versions/: 01a118aab696_added_ai_tables_1.py  27b0fa6a4413_added_ai_tables_1.py  42815d8690ab_add_refresh_token_to_users.py  704bfb2f999b_add_refresh_token_expiration_to_users.py  88894c3ed182_update_audit_entry.py  a78abe501e8e_change_users.py  d4d4cd27dbcc_added_ai_tables_1.py
backend/api_server/api/: dependencies.py  mian.py
backend/api_server/api/routes/: auth.py  users.py
backend/api_server/core/: config.py  constant.py  context.py  log.py  security.py  util.py
backend/api_server/database/: __init__.py  db.py  session.py
backend/api_server/models/: __init__.py  audit.py  base.py  chat_bot.py  conversation.py  enums.py  knowledge_base.py  llm.py  settings.py  users.py
backend/api_server/schemas/: __init__.py  auth.py  base.py  users.py
backend/api_server/services/: __init__.py  base.py  user.py
backend/scripts/: run_init.cmd
backend/scripts/sql/: duplicatedb.sql
backend/tests/: conftest.py  test_get_history.py  test_simple.py
backend/tests/api_server/: test_init_data.py
doc/: Project.md  Setup.md
frontend/: .env  .eslintrc.cjs  .prettierrc  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.js  vite.config.ts
frontend/docs/: BackendOpenAPI.json
frontend/src/: App.css  App.jsx  (+5 more)
(+41 files in other folders)
