[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[standard]>=0.116.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "pyodbc>=5.2.0",
    "sqlalchemy>=2.0.43",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/api_server",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# https://docs.pytest.org/en/latest/explanation/goodpractices.html#which-import-mode
addopts = [
    "--import-mode=importlib",
]
env = [
    "ENV=test",
]


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-env>=1.1.5",
]
